--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "prisma generate && next dev",
+    "build": "prisma generate && prisma db push && prisma db seed && next build",
+    "build-sql": "npx prisma migrate dev --name init",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ."
