--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "prisma generate && next dev",
     "build": "prisma generate && prisma db push && prisma db seed && next build",
-    "build-sql": "npx prisma migrate dev --name init",
+    "build-sql": "npx prisma migrate dev --name init && prisma db seed",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ."
@@ -24,6 +24,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "lodash-es": "^4.17.21",
     "ms": "^2.1.3",
     "next": "13.5.4",
     "postcss": "8.4.31",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/lodash-es": "^4.14.202",
     "prettier": "^3.1.0"
   },
   "type": "module"
