--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     healthcheck:
       # specifying user and database is needed to avoid `FATAL:  role "root" does not exist`
       # spam in the logs
-      test: ["CMD", "pg_isready", "-U", "prisma", "-d", "tests"]
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
       interval: 5s
       timeout: 2s
       retries: 20
