--- a/package.json
+++ b/package.json
@@ -16,29 +16,32 @@
     "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.4.1",
-    "@types/ms": "^0.7.32",
-    "@types/node": "20.8.3",
-    "@types/react": "18.2.25",
-    "@types/react-dom": "18.2.11",
+    "@prisma/client": "^5.7.1",
+    "@types/ms": "^0.7.34",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
-    "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "iron-session": "^8.0.1",
     "lodash-es": "^4.17.21",
     "ms": "^2.1.3",
-    "next": "13.5.4",
-    "postcss": "8.4.31",
-    "prisma": "^5.4.1",
+    "next": "14.0.4",
+    "postcss": "8.4.32",
+    "prisma": "^5.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/lodash-es": "^4.14.202",
-    "prettier": "^3.1.0"
+    "@types/lodash-es": "^4.17.12",
+    "bootstrap": "^5.3.2",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.5"
   },
   "type": "module"
 }
