--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
+    "dev": "next dev",
     "build": "prisma generate && prisma db push && prisma db seed && next build",
     "build-sql": "npx prisma migrate dev --name init && prisma db seed",
     "start": "next start",
@@ -17,31 +17,31 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
-    "@types/ms": "^0.7.34",
+    "bcrypt": "^5.1.1",
+    "iron-session": "^8.0.1",
+    "lodash-es": "^4.17.21",
+    "next": "14.0.4",
+    "prisma": "^5.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
+    "bootstrap": "^5.3.2",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
-    "iron-session": "^8.0.1",
-    "lodash-es": "^4.17.21",
-    "ms": "^2.1.3",
-    "next": "14.0.4",
     "postcss": "8.4.32",
-    "prisma": "^5.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.4.0",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.5",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3"
-  },
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/lodash-es": "^4.17.12",
-    "bootstrap": "^5.3.2",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.5"
   },
   "type": "module"
 }
