--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=prisma
 POSTGRES_PRISMA_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_URL}/${POSTGRES_DB}
+IRON_SESSION_PASSWORD=IRON_SESSION_PASSWORD
