--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=prisma
 POSTGRES_PRISMA_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_URL}/${POSTGRES_DB}
-IRON_SESSION_PASSWORD=IRON_SESSION_PASSWORD
+
+# Must be at least 32 characters long
+IRON_SESSION_PASSWORD=IRON_SESSION_PASSWORD_IRON_SESSION_PASSWORD
