--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@types/async": "^3.2.24",
+    "async": "^3.2.5",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.1",
     "lodash-es": "^4.17.21",
@@ -39,6 +41,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
+    "puppeteer": "^21.3.6",
     "sass": "^1.69.5",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3"
