--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db push && prisma db seed && next build",
+    "build": "prisma generate && prisma db push && prisma db seed",
     "build-sql": "npx prisma migrate dev --name init && prisma db seed",
     "start": "next start",
     "lint": "next lint",
