--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db push && prisma db seed",
+    "build": "npm run build-db && npm run seed-db",
+    "build-db": "prisma generate && prisma db push",
+    "seed-db": "prisma db seed",
     "build-sql": "npx prisma migrate dev --name init && prisma db seed",
     "start": "next start",
     "lint": "next lint",
