--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
+# General variables
+
 POSTGRES_URL=postgres
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=password
 POSTGRES_DB=prisma
-POSTGRES_PRISMA_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_URL}/${POSTGRES_DB}
+CONNECTION_URI_BASE=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_URL}
 
+# Image specific variables
+
+# For Node.js
 # Must be at least 32 characters long
 IRON_SESSION_PASSWORD=IRON_SESSION_PASSWORD_IRON_SESSION_PASSWORD
+POSTGRES_PRISMA_URL=${CONNECTION_URI_BASE}/${POSTGRES_DB}
+
+# For Metabase
+MB_DB_CONNECTION_URI=${CONNECTION_URI_BASE}/metabase
+METABASE_PORT=3001
