--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,17 +30,15 @@ services:
       timeout: 2s
       retries: 20
 
-  pgadmin:
-    image: dpage/pgadmin4:8
-    restart: unless-stopped
-    environment:
-      PGADMIN_DEFAULT_EMAIL: user@domain.com
-      PGADMIN_DEFAULT_PASSWORD: SuperSecret
+  metabase:
+    image: metabase/metabase:latest
     ports:
-      - "5050:80"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      - ${METABASE_PORT}:3000
+    healthcheck:
+      test: curl --fail -I http://localhost:${METABASE_PORT}/api/health || exit 1
+      interval: 15s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres-data:
-  pgadmin-data:
