--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,12 @@ CONNECTION_URI_BASE=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRE
 # Image specific variables
 
 # For Node.js
-# Must be at least 32 characters long
 IRON_SESSION_PASSWORD=IRON_SESSION_PASSWORD_IRON_SESSION_PASSWORD
 POSTGRES_PRISMA_URL=${CONNECTION_URI_BASE}/${POSTGRES_DB}
+
+# For pgAdmin
+PGADMIN_DEFAULT_EMAIL=user@domain.com
+PGADMIN_DEFAULT_PASSWORD=SuperSecret
 
 # For Metabase
 MB_DB_CONNECTION_URI=${CONNECTION_URI_BASE}/metabase
