--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "puppeteer": "^21.3.6",
     "sass": "^1.69.5",
     "ts-node": "^10.9.2",
+    "type-fest": "^4.9.0",
     "typescript": "5.3.3"
   },
   "type": "module"
