--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run build-db && npm run seed-db && next build",
+    "build": "next build",
     "build-db": "prisma generate && prisma db push",
     "seed-db": "prisma db seed",
     "build-sql": "npx prisma migrate dev --name init && prisma db seed",
