--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -9,6 +9,6 @@ importOrder:
   - "^(?:assert|assert/strict|async_hooks|buffer|child_process|cluster|console|constants|crypto|dgram|diagnostics_channel|dns|dns/promises|domain|events|fs|fs/promises|http|http2|https|inspector|module|net|os|path|path/posix|path/win32|perf_hooks|process|punycode|querystring|readline|readline/promises|repl|stream|stream/consumers|stream/promises|stream/web|string_decoder|sys|timers|timers/promises|tls|trace_events|tty|url|util|util/types|v8|vm|worker_threads|zlib)$"
   - "<THIRD_PARTY_MODULES>"
   # File extension is required in Node.js ESM imports https://nodejs.org/docs/latest-v17.x/api/esm.html#mandatory-file-extensions
-  - "^\\.{1,2}\\/.+\\.(js|ts|jsx|tsx)$"
+  - "^\\.{1,2}\\/.+\\.(js|ts|jsx|tsx|json)$"
 importOrderSeparation: true
 importOrderSortSpecifiers: true
