--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run build-db && npm run seed-db && next build",
     "build-db": "prisma generate && prisma db push",
     "seed-db": "prisma db seed",
-    "build-sql": "npx prisma migrate dev --name init && prisma db seed",
+    "build-sql": "npx prisma migrate dev --name init",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ."
