--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,16 +34,16 @@ services:
       timeout: 2s
       retries: 20
 
-  # pgadmin:
-  #   image: dpage/pgadmin4:8
-  #   restart: unless-stopped
-  #   env_file: .env
-  #   ports:
-  #     - "5050:80"
-  #   volumes:
-  #     - pgadmin-data:/var/lib/pgadmin
-  #     # https://stackoverflow.com/a/63318968/
-  #     - ./servers.json:/pgadmin4/servers.json
+  pgadmin:
+    image: dpage/pgadmin4:8
+    restart: unless-stopped
+    env_file: .env
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+      # https://stackoverflow.com/a/63318968/
+      - ./servers.json:/pgadmin4/servers.json
 
 volumes:
   postgres-data:
